@@ -3,12 +3,10 @@ SportsTracker-TODO
 
 - Update notification when a new SportsTracker version has been released:
 - Status (branch update_check)
-  - SematicVersion for versioning + tests are done
-  - STUpdateChecker has been added to application startup, works with dummy versions
+  - done, works properly
 - TODO
-  - see TODOs in STUpdateChecker, implement latest version download
-  - unit test for STUpdateChecker?
-  - add to ChangeLog
+  - add unit test for STUpdateChecker?
+  - pull request, close dev branch
 
 Java 9/10/11 migration:
 - works fine with JDK 10 (no build or test errors and no execution problems)
