@@ -4,18 +4,33 @@ import de.saring.sportstracker.gui.STContext
 import de.saring.util.SemanticVersion
 import javafx.application.Platform
 import javafx.scene.control.Alert
+import java.net.HttpURLConnection
+import java.net.URI
+import java.net.http.HttpClient
+import java.net.http.HttpRequest
+import java.net.http.HttpResponse.BodyHandlers
 import java.util.logging.Logger
 import javax.inject.Inject
 import javax.inject.Singleton
 
+
 /**
- * TODO
+ * Class for checking whether there is a SportsTracker update available.
+ *
+ * @property context the SportsTracker context (dependency injection)
+ *
+ * @author Stefan Saring
  */
 @Singleton
 class STUpdateChecker @Inject constructor(
         private val context: STContext) {
 
+    /**
+     * Checks whether there is an update available for the SportsTracker application. If so, a info dialog will be
+     * displayed.
+     */
     fun checkForUpdates() {
+        LOGGER.info("Checking for SportsTracker updates...")
 
         val installedVersion = SemanticVersion.parse(context.resources.getString("application.version"))
         val latestVersion = getLatestVersion()
@@ -30,14 +45,40 @@ class STUpdateChecker @Inject constructor(
         }
     }
 
+    /**
+     * Downloads the latest stable version number from the SportsTracker website. It uses the new HttpClient API
+     * introduced with Java 11.
+     *
+     * @return the latest version number or version 0.0.0 in case of errors
+     */
     private fun getLatestVersion(): SemanticVersion {
-        // TODO
-        // use HTTP Client API for downloading the version number?
-        // => https://openjdk.java.net/groups/net/httpclient/intro.html
-        return SemanticVersion(7, 6, 2)
+        val client = HttpClient.newHttpClient()
+
+        try {
+            val request = HttpRequest.newBuilder()
+                    .uri(URI.create(URL_LATEST_VERSION))
+                    .build()
+
+            val response = client.send(request, BodyHandlers.ofString())
+            val status = response.statusCode()
+
+            if (status == HttpURLConnection.HTTP_OK) {
+                val strLatestVersion = response.body()
+                return SemanticVersion.parse(strLatestVersion.trim())
+            }
+
+            LOGGER.severe("Failed to download latest SportsTracker version number, got HTTP status: $status!")
+        }
+        catch (e: Exception) {
+            LOGGER.severe("Failed to download latest SportsTracker version number! Error: $e")
+        }
+
+        return SemanticVersion(0, 0, 0)
     }
 
     companion object {
-        val LOGGER = Logger.getLogger(STUpdateChecker::class.java.name)
+        private val LOGGER = Logger.getLogger(STUpdateChecker::class.java.name)
+
+        private const val URL_LATEST_VERSION = "https://saring.de/sportstracker/latest-version.txt"
     }
 }
