@@ -7,6 +7,9 @@ v7.6.1:
  - Kotlin language can now be used in all SportsTracker Maven modules
    (was limited to st-exerciseviewer before)
  - updated Kotlin to version 1.3.21
+ - added check for SportsTracker application updates, the latest version number
+   is downloaded from the SportsTracker website
+   (checked on each application start after 30 seconds)
 
 v7.6.0:
  SportsTracker changes:
